--- a/Dissertation/conclusion.tex
+++ b/Dissertation/conclusion.tex
@@ -6,11 +6,15 @@
 %% 9.2.3 В заключении автореферата диссертации излагают итоги данного исследования, рекомендации и перспективы дальнейшей разработки темы.
 %% Поэтому имеет смысл сделать эту часть общей и загрузить из одного файла в автореферат и в диссертацию:
 
+Убегающие электроны могут играть существенную роль в некоторых процессах, происходящих в термоядерной плазме токамаков. С помощью измерений спектров жёсткого рентгеновского излучения можно восстановить функцию распределения убегающих электронов, исследовать их поведение и эволюцию во времени. Возможно определить максимальную энергию электронов, оценить переносимый ими ток. В связи с тем, что пучёк убегающих электронов может повреждать конструкционные элементы токамаков, диагностика убегающих электронов имеет большую важность на крупных установках, как существующих (JET, Asdex Upgrade), так и на проектируемых, в том числе на токамаке ИТЭР. 
+
+Настоящая работа посвящена диагностике убегающих электронов по жёсткому рентгеновскому излучению, и охватывает как вопросы сбора данных, так и получения из них физической информации, для чего требуется обработка измеренной осциллограммы, построение спектра, восстановление по спектру функции распределения по энергии. Приведены некоторые выводы о поведении убегающих электронов в плазме токамаков.
+
 Основные результаты работы заключаются в следующем:
 
 \input{common/concl}
 
 Таким образом, перечисленные выше результаты позволяют сделать вывод об успешном решении поставленных задач и достижения цели исследования.
 
-В заключении автор выражает благодарность научному руководителю А.~Е.~Шевелеву за научное руководство при написании диссертации, а так же в научной деятельности автора диссертации, М.~В.~Ильясовой за сотрудничество и помощь в публикации многих результатов, В.~Г.~Киптилому за помощь в вопросах взаимодействия и работы на токамаке JET.
+В заключение автор выражает благодарность научному руководителю А.~Е.~Шевелеву за научное руководство при написании диссертации, а так же в научной деятельности автора диссертации, М.~В.~Ильясовоу за сотрудничество и помощь в публикации многих полученных результатов, В.~Г.~Киптилому за помощь в вопросах взаимодействия и работы на токамаке JET.
 
