--- a/biblio/biblatex.tex
+++ b/biblio/biblatex.tex
@@ -10,6 +10,9 @@ bibencoding=utf8,% кодировка bib файла
 sorting=none,% настройка сортировки списка литературы
 style=gost-numeric,% стиль цитирования и библиографии (по ГОСТ)
 language=autobib,% получение языка из babel/polyglossia, default: autobib % если ставить autocite или auto, то цитаты в тексте с указанием страницы, получат указание страницы на языке оригинала
+movenames=true, % Читаем - https://mirror.truenetwork.ru/CTAN/macros/latex/contrib/biblatex-contrib/biblatex-gost/doc/biblatex-gost.pdf
+maxbibnames=100,
+maxcitenames=100,
 autolang=other,% многоязычная библиография
 clearlang=true,% внутренний сброс поля language, если он совпадает с языком из babel/polyglossia
 defernumbers=true,% нумерация проставляется после двух компиляций, зато позволяет выцеплять библиографию по ключевым словам и нумеровать не из большего списка
