--- a/common/concl.tex
+++ b/common/concl.tex
@@ -2,14 +2,14 @@
 %% 5.3.3 В заключении диссертации излагают итоги выполненного исследования, рекомендации, перспективы дальнейшей разработки темы.
 %% 9.2.3 В заключении автореферата диссертации излагают итоги данного исследования, рекомендации и перспективы дальнейшей разработки темы.
 \begin{enumerate}
-  \item были завиты методы обработки сигналов со сцинтиляционных детекторов. Разработанные и модифицированные методы обработки сигналов позволяют обрабатывать сигналы с большим количеством наложений. Тестирование методов проведено на модельных сигналах. Так, для параметров сигнала, характерных для детекторов на основе LaBr3(Ce), при загрузке $10^7$~с${}^{-1}$ ошибка определения загрузки составила 15\%, а разрешение на линии 8~МэВ при этой загрузке, обусловленное наложениями, ошибками обработки и шумами сигнала, составило 0.101~МэВ. Разработанные и модифицированные алгоритмы были реализованы в компьютерном коде ``DeGaSum''. Код успешно используется для обработки сигналов и построения спектров жёсткого рентгеновского излучения на установках Глобус-М2, Туман-3М, ФТ-2, Asdex Upgrade, JET;
+  \item развиты методы обработки сигналов со сцинтиляционных детекторов. Разработанные и модифицированные методы обработки сигналов позволяют обрабатывать сигналы с большим количеством наложений. Тестирование методов проведено на модельных сигналах. Так, для параметров сигнала, характерных для типичных детекторов на основе LaBr3(Ce), при загрузке $10^7$~с${}^{-1}$ ошибка определения загрузки составила 15\%, а разрешение на линии 8~МэВ при этой загрузке, обусловленное наложениями, ошибками обработки и шумами сигнала, составило 0.101~МэВ. Разработанные и модифицированные алгоритмы были реализованы в компьютерном коде ``DeGaSum''. Код успешно используется для обработки сигналов и построения спектров жёсткого рентгеновского излучения на установках Глобус-М2, Туман-3М, ФТ-2, Asdex Upgrade, JET;
 
-  \item были модифицированы методы восстановления исходных спектров гамма и жёсткого рентгеновского излучения и функции распределения убегающих электронов по энергии по измеренным спектрам излучения. Тестирование методов проведено на сигналах от калибровочных источников и модельных сигналах. Разработанные и модифицированные алгоритмы были реализованы в компьютерном коде ``DeGaSum''. Код успешно используется для обработки спектров и восстановления функцкции распределения убегающих электронов по энергиям на установках Туман-3М, ФТ-2, Asdex Upgrade, JET;
+  \item модифицированы методы восстановления исходных спектров гамма и жёсткого рентгеновского излучения из источника, а так же функции распределения убегающих электронов по энергии по измеренным спектрам излучения. Тестирование методов проведено на сигналах от калибровочных источников и модельных сигналах. Разработанные и модифицированные алгоритмы были реализованы в компьютерном коде ``DeGaSum''. Код успешно используется для обработки спектров и восстановления функцкции распределения убегающих электронов по энергиям на установках Туман-3М, ФТ-2, Asdex Upgrade, JET;
 
-  \item на токамаке Asdex Upgrade был разработан и введён в эксплуатацию спектрометр жёсткого рентгеновского излучения REGARDS. Спектрометр состит из детектора на основе кристалла LaBr3(Ce), сигнал с которого подаётся на плату АЦП NI~5772-02, затем сохраняется на жёсткий диск. Частота оцифровки составляет 400~МГц, время оцифровки --- 20~секунд. Для сохранения такого потка данных на управляющий компьютер были использованы алгоритмы сжатия данных в реальном времени без потерь, реализованные в компьютером коде ``DeGaSum''. Для управления спектрометром (запуск, сохранение и обработка данных) использовался компьютерный код ``DeGaSum'';
+  \item разработан и введён в эксплуатацию спектрометр жёсткого рентгеновского излучения REGARDS на токамаке Asdex Upgrade. Спектрометр состит из детектора на основе кристалла LaBr3(Ce), сигнал с которого подаётся на плату АЦП NI~5772-02, где оцифровывается; оцифрованный сигнал сохраняется на жёсткий диск управляющего компьютера. Частота оцифровки составляет 400~МГц, время оцифровки --- до 20~секунд непрерывной записи без потерь данных. Для сохранения такого потка данных на управляющий компьютер были использованы алгоритмы сжатия данных без потерь в реальном времени, реализованные в компьютером коде ``DeGaSum''. Компьютерный код ``DeGaSum'' был модифицирован для управления спектрометром (запуск, сохранение и обработка данных);
 
-  \item с помощью разработанного спектрометра REGARDS и имевшегося на токамаке спектрометра AUG-HXR было исследовано поведение убегающих электронов в токамаке Asdex Upgrade. Была проведена обработка сигналов с помощью кода ``DeGaSum'', получены функции распределения убегающих электронов по энергии, максимальня энергия убегающих электронов. Исследована эволюция убегающих электронов от времени. Показано, что с увеличением количества инжектируемого аргона ток убегающих электронов растёт линейно. Максимальная энергия убегающих электронов слабо зависит от количества инжектируемого аргона, спадая с ростом его концентрации;
+  \item исследовано поведение убегающих электронов на токамаке Asdex Upgrade с помощью разработанного спектрометра REGARDS и имевшегося на токамаке спектрометра AUG-HXR. Была проведена обработка сигналов с помощью кода ``DeGaSum'', получены функции распределения убегающих электронов по энергии, максимальня энергия убегающих электронов. Исследована эволюция убегающих электронов от времени. Показано, что с увеличением количества инжектируемого аргона ток убегающих электронов растёт линейно. Показано, что максимальная энергия убегающих электронов слабо зависит от количества инжектируемого аргона, спадая с ростом его концентрации;
 
-  \item были проведены измерения жёсткого рентгеновского излучения на токамаке JET с помощью спектрометров на основе кристаллов NaI(Tl) с вертикальной линией обзора. Была проведена обработка спектров излучения с помощью кода ``DeGaSum'', получены функции распределения убегающих электронов по энергии. Исследована эволюция убегающих электронов от времени.
+  \item проведены измерения жёсткого рентгеновского излучения на токамаке JET с помощью спектрометров на основе кристаллов NaI(Tl) с вертикальной линией обзора. Была проведена обработка спектров излучения с помощью кода ``DeGaSum'', получены функции распределения убегающих электронов по энергии. Исследована эволюция функции распределения по энергии убегающих электронов от времени.
 
 \end{enumerate}
